fix: fix the window width distortion

--- a/app/globals.css
+++ b/app/globals.css
@@ -70,7 +70,7 @@
   }
 
   body {
-    @apply bg-background text-foreground;
+    @apply overflow-x-hidden bg-background text-foreground;
   }
   /* body {
     @apply bg-gradient-to-br from-card via-sky-100 to-card text-card-foreground;
